--- a/src/app/pages/home/index.html
+++ b/src/app/pages/home/index.html
@@ -1,3 +1,5 @@
+<!-- Criar botoes para redirecioar para paginas tambem, no header, um que volta para home, e que redireciona para a pagina contatos, com um icone de telefone -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
