pagina-Praia-feita-arrumando-erros-na-pagina-home

--- a/src/app/pages/home/index.html
+++ b/src/app/pages/home/index.html
@@ -18,18 +18,27 @@
       <p>O objetivo é proporcionar aos leitores um conteúdo rico e útil para planejar viagens inesquecíveis, seja para quem busca relaxar, explorar ou se aventurar por novos lugares.</p>
     </article>
   </header>
-  <main class="mt-6 pt-2 pb-6 flex flex-col ">
+  <main class="mt-6 pt-2 pb-6 flex flex-col mx-2">
     <div class="image-container relative bg-cover bg-center cursor-pointer" title="Destinos de Praia" data-link="../Destinos de Praia/index.html" style="background-image: url('/public/Destinos de Praia.png');">
+      <div class="absolute inset-0 flex items-center justify-center p-4 texto-imagem">
+        <p class="text-lg font-bold p-2">Destinos de Praia</p>
+      </div>
       <div class="overlay absolute inset-0 flex items-center justify-center">
         <p><strong>Destinos de Praia:</strong> Descubra as melhores praias para relaxar, praticar esportes aquáticos ou aproveitar o sol.</p>
       </div>
     </div>
     <div class="image-container relative bg-cover bg-center cursor-pointer" title="Dicas de Mochilão" data-link="../Dicas de Mochilao/index.html" style="background-image: url('/public/Dicas de Mochilao.png');">
+      <div class="absolute inset-0 flex items-center justify-center p-4 texto-imagem">
+        <p class="text-lg font-bold p-2">Dicas de Mochilão</p>
+      </div>
       <div class="overlay absolute inset-0 flex items-center justify-center">
         <p><strong>Dicas de Mochilão:</strong> Orientações práticas e econômicas para quem deseja explorar novos destinos de forma descomplicada.</p>
       </div>
     </div>
     <div class="image-container relative bg-cover bg-center cursor-pointer" title="Melhores Hotéis" data-link="../Melhores Hoteis/index.html" style="background-image: url('/public/Melhores Hoteis.png');">
+      <div class="absolute inset-0 flex items-center justify-center p-4 texto-imagem">
+        <p class="text-lg font-bold p-2">Melhores Hotéis</p>
+      </div>
       <div class="overlay absolute inset-0 flex items-center justify-center">
         <p><strong>Melhores Hotéis:</strong> Conheça nossas recomendações de hospedagem para todos os gostos e orçamentos.</p>
       </div>
@@ -40,6 +49,6 @@
     <p class="text-xs text-center">Este site foi desenvolvido como parte de um trabalho acadêmico para a faculdade. Ele tem como objetivo demonstrar habilidades em desenvolvimento web, incluindo estruturação de conteúdo, navegação entre páginas e design responsivo.</p>
     <p class="text-xs text-center mt-2"><strong>Arthur Fernandes</strong> - UVV - 2024</p>
   </footer>
-  <script src="./index.js"></script>
+  <script src="./script.js"></script>
 </body>
 </html>
