--- a/src/app/pages/home/styles.css
+++ b/src/app/pages/home/styles.css
@@ -11,6 +11,10 @@
   overflow: hidden;
 }
 
+.texto-imagem p {
+  background-color: rgba(255, 255, 255, 0.6);
+}
+
 .overlay {
   background-color: rgba(0, 0, 0, 0.5);
   opacity: 0;
