pagina-de-mochilao-feita

--- a/src/app/pages/Destinos de Praia/index.html
+++ b/src/app/pages/Destinos de Praia/index.html
@@ -12,10 +12,10 @@
   <header class="text-center">
     <h1 class="font-bold text-6xl text-center py-6">Destinos de Praia</h1>
     <div class="mb-4 flex gap-4 justify-center">
-      <button class="hrefBtn bg-[#0b366b] p-2 text-white border-2 border-black" data-link="../Contato/index.html">Contato</button>
-      <button class="hrefBtn bg-[#0b366b] p-2 text-white border-2 border-black" data-link="../Dicas de Mochilao/index.html">Mochileiro</button>
-      <button class="hrefBtn bg-[#0b366b] p-2 text-white border-2 border-black" data-link="../Melhores Hoteis/index.html">Hotel</button>
-      <button class="hrefBtn bg-[#0b366b] p-2 text-white border-2 border-black" data-link="../Home/index.html">Home</button>
+      <button class="hrefBtn bg-[#0b366b] px-4 py-2 text-white border-2 border-black" data-link="../Home/index.html">Pagina Inicial</button>
+      <button class="hrefBtn bg-[#0b366b] p-2 text-white border-2 border-black" data-link="../Dicas de Mochilao/index.html">Dicas de Mochilão</button>
+      <button class="hrefBtn bg-[#0b366b] px-4 py-2 text-white border-2 border-black" data-link="../Melhores Hoteis/index.html">Melhores Hotéis</button>
+      <button class="hrefBtn bg-[#0b366b] px-4 py-2 text-white border-2 border-black" data-link="../Contato/index.html">Entre em contato</button>
     </div>
   </header>
   <main>
