pagina-hoteis-feita

--- a/src/app/pages/Destinos de Praia/index.html
+++ b/src/app/pages/Destinos de Praia/index.html
@@ -72,13 +72,13 @@
         <p class="text-justify bg-[#0b366b] text-white border-2 border-black p-2">A Lagoa do Paraíso, em Jericoacoara, é uma das mais belas da região. Com água entre diversos tons de azul, a Lagoa do Paraíso proporciona um grande espetáculo para os olhos e encanta a quem escolhe o lugar para descansar. As redes dentro da água já são tradição, mas por lá há também vários restaurantes, que colocam mesas e cadeiras dentro da água para que os visitantes relaxarem ainda mais.</p>
       </div>
       <li class="border-t-2 border-black mt-2 pt-2">Quarta Praia, Morro de São Paulo – Bahia</li>
-      <div class="flex items-start gap-4 pb-2 pt-2 mb-4 border-b-2 border-black">
+      <div class="flex items-start gap-4 pb-2 pt-2  border-b-2 border-black">
         <img class="w-80 h-80 object-cover" src="/public/quarta praia.png">
         <p class="text-justify bg-[#0b366b] text-white border-2 border-black p-2">A Quarta Praia de Morro de São Paulo é o lugar certo para ficar longe do movimento e curtir o lindo cenário natural da ilha. Com 4 km de faixa de areia e permeada com belas formações de piscinas naturais, a Quarta Praia é um convite a se isolar e relaxar. A infraestrutura da Quarta Praia está limitada ao início da faixa de areia (próximo à Terceira Praia), onde estão as piscinas naturais que aparecem na maré baixa e rendem até um bom mergulho de superfície, com direto a ver peixinhos. Mais à frente, você encontrará pequenos trechos com movimento, onde estão alguns dos hotéis e resorts da Quarta Praia, entre eles o famoso Patachocas.</p>
       </div>
     </ol>
   </main>
-  <footer class="px-4">
+  <footer class="px-4 mt-4">
     <p class="text-xs text-center">Este site foi desenvolvido como parte de um trabalho acadêmico para a faculdade. Ele tem como objetivo demonstrar habilidades em desenvolvimento web, incluindo estruturação de conteúdo, navegação entre páginas e design responsivo.</p>
     <p class="text-xs text-center mt-2"><strong>Arthur Fernandes</strong> - UVV - 2024</p>
   </footer>
