--- a/src/app/pages/Dicas de Mochilao/index.html
+++ b/src/app/pages/Dicas de Mochilao/index.html
@@ -1,5 +1,3 @@
-<!-- Criar botoes para redirecioar para paginas tambem, no header, um que volta para home, e que redireciona para a pagina contatos, com um icone de telefone -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -60,7 +58,7 @@
       <p>Lembre que você pode sempre lavar as roupas durante a viagem ou comprar alguma coisa se for preciso. Gosto de deixar de fora tudo o que “talvez eu vá usar”. Se não é certeza que vou precisar ou se vou usar poucas vezes, posso me virar muito bem sem. Fazer um mochilão é uma verdadeira experiência de desapego, que no começo pode assustar, e se você acha que não é capaz de viajar com pouca coisa, esse realmente não é o estilo de viagem mais indicado.</p>
     </article>
   </main>
-  <footer class="px-4">
+  <footer class="px-4 mt-4">
     <p class="text-xs text-center">Este site foi desenvolvido como parte de um trabalho acadêmico para a faculdade. Ele tem como objetivo demonstrar habilidades em desenvolvimento web, incluindo estruturação de conteúdo, navegação entre páginas e design responsivo.</p>
     <p class="text-xs text-center mt-2"><strong>Arthur Fernandes</strong> - UVV - 2024</p>
   </footer>
