--- a/src/app/pages/Melhores Hoteis/index.html
+++ b/src/app/pages/Melhores Hoteis/index.html
@@ -1,66 +1,111 @@
-<!-- Criar botoes para redirecioar para paginas tambem, no header, um que volta para home, e que redireciona para a pagina contatos, com um icone de telefone -->
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dicas de Mochilão</title>
+  <title>Melhores Hoteis</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-[#ffe56d]">
   <header class="text-center">
-    <h1 class="font-bold text-6xl text-center py-6">Dicas de Mochilão</h1>
+    <h1 class="font-bold text-6xl text-center py-6">Melhores Hoteis de praia do Brasil</h1>
     <div class="mb-4 flex gap-4 justify-center">
       <button class="hrefBtn bg-[#0b366b] px-4 py-2 text-white border-2 border-black" data-link="../Home/index.html">Pagina Inicial</button>
       <button class="hrefBtn bg-[#0b366b] p-2 text-white border-2 border-black" data-link="../Destinos de Praia/index.html">Destinos de Praia</button>
-      <button class="hrefBtn bg-[#0b366b] px-4 py-2 text-white border-2 border-black" data-link="../Melhores Hoteis/index.html">Melhores Hotéis</button>
+      <button class="hrefBtn bg-[#0b366b] p-2 text-white border-2 border-black" data-link="../Dicas de Mochilao/index.html">Dicas de Mochilão</button>
       <button class="hrefBtn bg-[#0b366b] px-4 py-2 text-white border-2 border-black" data-link="../Contato/index.html">Entre em contato</button>
     </div>
   </header>
   <main>
     <article class="bg-[#0b366b] mx-24 px-2 py-2 border-2 border-black text-white">
-      <h2 class="text-2xl font-semibold mb-4">O que é um mochilão?</h2>
-        <p class="border-b-2 pb-2">Mochilão nada mais é do que um jeito de viajar barato praticado por pessoas de várias idades e em diversas partes do mundo. Lá fora esse tipo de viagem é conhecida por “backpacking” (em inglês “backpack” significa “mochila”). Então quando alguém fala que vai “fazer um mochilão” essa pessoa quer dizer que vai viajar por conta própria com uma mochila nas costas, gastando o mínimo de dinheiro possível, sem nenhum roteiro muito rígido, levando apenas coisas essenciais e úteis na bagagem. É um estilo de viagem para quem quer economizar, conhecer pessoas, lugares, culturas, paisagens e provar novos sabores sem gastar muito.</p>
-      <h2 class="text-2xl font-semibold mb-4 mt-4">Tipos de mochilão</h2>
-        <ul class="list-disc border-b-2 pb-2">
-          <li class="text-xl font-semibold mb-4 mx-8">Mochilão de curta duração</li>
-          <p class="mx-12">Esse é o tipo de viagem mais comum e viável para a grande maioria das pessoas. Normalmente dura de 15 a 90 dias e é feita em época de férias, depois da formatura, naqueles dias livres antes de iniciarmos em um novo trabalho ou qualquer outra oportunidade que junte tempo livre e dinheiro disponível.</p>
-          <li class="text-xl font-semibold mb-4 mx-8">Mochilão clássico</li>
-          <p class="mx-12">Já o mochilão clássico é uma viagem mais longa, que pode durar meses (ou até mesmo anos dependendo da sua disposição). É aquela viagem da sua vida! Em alguns países, inclusive, esse tipo de viagem é visto como um ritual de passagem.Já o mochilão clássico é uma viagem mais longa, que pode durar meses (ou até mesmo anos dependendo da sua disposição). É aquela viagem da sua vida! Em alguns países, inclusive, esse tipo de viagem é visto como um ritual de passagem.</p>
-        </ul>
-      <h2 class="text-2xl font-semibold mb-4 mt-4">Tipos de Viajantes</h2>
-        <ul class="list-disc border-b-2 pb-2">
-          <li class="mx-8">Viajantes que trabalham para viajar</li>
-          <li class="mx-8">Viajantes endinheirados</li>
-          <li class="mx-8">Mochileiros que trabalham durante a viagem</li>
-          <li class="mx-8">Mochileiros roots</li>
-        </ul>
-      <h2 class="text-2xl font-semibold mb-4 mt-4">Como escolher o roteiro para um mochilão?</h2>
-        <p class="mb-2">Essa é uma pergunta muito pessoal e para saber a resposta é preciso analisar para onde você gostaria de ir e por qual motivo. É para ver alguma paisagem específica? Alguma atração ou evento? Ter contato com alguma cultura que sempre quis conhecer? Se você nunca fez um mochilão pode ser interessante montar um roteiro pelo próprio Brasil para se acostumar com esse estilo de viagem antes de partir para jornadas mais desafiadoras no exterior.</p>
-        <p class="mb-2">Muitos brasileiros escolhem fazer mochilão pela América do Sul pela proximidade, custo baixo e facilidade de se virar sem saber espanhol. Na Europa, Portugal e Espanha podem ser bons países para começar. Se você tiver coragem para ir mais longe a Tailândia e a Austrália são consideradas ótimas para iniciantes por recebem milhares de mochileiros todos os anos e contarem com uma ótima infraestrutura.</p>
-        <p class="mb-4 border-b-2 pb-2">Você pode tanto definir o roteiro a partir do orçamento que tiver disponível quanto determinar quanto de dinheiro precisará juntar para fazer aquele roteiro desejado. O tempo de permanência também vai depender da sua disponibilidade e do quanto de dinheiro você conseguir reservar para isso, ou da sua capacidade de fazer renda durante a viagem.</p>
-      <h2 class="text-2xl font-semibold mb-4 mt-4">Quanto custa fazer um mochilão?</h2>
-        <p class="mb-2">O custo da sua viagem de mochilão vai depender do tempo que você vai viajar, dos países ou cidades pelas quais vai passar e do quanto você está disposto(a) a economizar. O ideal é pesquisar com antecedência sobre o custo de vida dos lugares e estimar gastos diários com hospedagem, alimentação, transporte e passeios que você pretende fazer por lá.</p>
-        <p class="mb-2">Além disso, é preciso separar uma graninha extra para imprevistos (que pode ser o saldo do cartão de crédito, só não esqueça de liberar para uso internacional hein!). Já fiz mochilão com orçamento equivalente a 25 dólares por dia (cerca de R$ 130,00) e acabei gastando menos, mas sei de pessoas que viajam com ainda menos que isso por dia.</p>
-        <p class="mb-4 border-b-2 pb-2">Fazer um mochilão pela América do Sul pode sair muito mais em conta do que pela Europa ou América do Norte. Por ser mais perto será mais fácil achar passagens baratas ou até mesmo optar por fazer alguns trajetos de ônibus (por que não?). Ninguém disse que mochilão precisa ser internacional. Mochilar pelo próprio país é uma ótima maneira de ganhar experiência e se sentir mais confiante para jornadas mais desafiadoras.</p>
-    <h2 class="text-2xl font-semibold mb-4 mt-4">Que documentos levar para um mochilão?</h2>
-      <ul class="list-disc border-b-2 pb-2">
-        <li class="mx-8">Passaporte</li>
-        <li class="mx-8">Certificado Internacional de Vacinação</li>
-        <li class="mx-8">Seguro Viagem</li>
-        <li class="mx-8">Visto</li>
+      <h2 class="text-2xl font-semibold mb-4">Lista dos melhores hotéis de praia do Brasil:</h2>
+      <ul class="list-disc border-b-2">
+        <li class="mx-8">Barracuda Beach – Itacaré/BA</li>
+        <li class="mx-8">Carmel Taíba – Taíba/CE</li>
+        <li class="mx-8">Casana – Preá/CE</li>
+        <li class="mx-8">Kenoa – Barra de São Miguel/AL</li>
+        <li class="mx-8">Nannai Muro Alto – Porto de Galinhas/PE</li>
+        <li class="mx-8">Pedras do Patacho – Paraia do Patacho/AL</li>
+        <li class="mx-8">Ponta dos Ganchos – Florianópolis/SC</li>
+        <li class="mx-8">Tivoli Eco Resort – Praia do Forte/BA</li>
+        <li class="mx-8">Txai – Itacaré/BA</li>
+        <li class="mx-8 pb-4">Zorah Beach – Trairi/CE</li>
       </ul>
-    <h2 class="text-2xl font-semibold mb-4 mt-4">Qual o melhor tamanho de mochila?</h2>
-      <p class="mb-2">Evite escolher uma mochila muito grande para ser sua companheira de viagem. Pode ser difícil a primeira vista, mas o ideal é comprar uma mochila média, com capacidade entre 40 a 50 litros. 45 litros pra mim é o ideal, cabe todo o que é essencial e não sobra espaço para nada desnecessário. Se não cabe, é porque você não precisa levar!</p>
-      <p class="mb-2">Além disso, as mochilas de 40-50 litros ficam dentro das medidas permitidas para bagagem de mão e dificilmente você vai conseguir ultrapassar o limite de 10kg com elas. Só é preciso ter cuidado para não incluir nenhum item que seja proibido de transportar no avião.</p>
-      <p class="mb-4 border-b-2 pb-2">E o objetivo de levar toda a bagagem em apenas uma mochila não é apenas “poético”, é justamente para ter mais mobilidade e facilitar na hora de andar pela cidade, pegar um transporte público, mudar de hospedagem… essas coisas que seriam muito mais complicadas com uma mala de rodinha a tiracolo, mas que ajudam a economizar muito dinheiro.</p>
-    <h2 class="text-2xl font-semibold mb-4 mt-4">O que levar na mochila?</h2>
-      <p class="mb-2">Apenas o essencial e que caiba em uma mochila de até 50 litros! O tipo de mochilão e o seu perfil de viajante é que vão determinar o que é essencial para você. Não faz sentido nenhum levar uma barraca se você pretende ficar sempre em hostel, por exemplo. A toalha de banho pode ser substituída facilmente por uma toalha de acampamento, que seca rápido e ocupa pouco espaço (ou mesmo por uma fralda de pano que faz o mesmo efeito e custa uma fração do valor).</p>
-      <p>Lembre que você pode sempre lavar as roupas durante a viagem ou comprar alguma coisa se for preciso. Gosto de deixar de fora tudo o que “talvez eu vá usar”. Se não é certeza que vou precisar ou se vou usar poucas vezes, posso me virar muito bem sem. Fazer um mochilão é uma verdadeira experiência de desapego, que no começo pode assustar, e se você acha que não é capaz de viajar com pouca coisa, esse realmente não é o estilo de viagem mais indicado.</p>
     </article>
+    <ul class="mx-28 mt-4">
+      <li class="bg-[#0b366b] text-white border-2 border-black p-2 object-fit flex inline-block mt-4 w-80">Barracuda Beach</li>
+      <div class="border-b-2 pb-2 border-black mt-2 pt-2 flex items-start gap-4 pt-2">
+        <img class="w-80 h-80 object-cover" src="/public/barracuda.png">
+        <p class="text-justify bg-[#0b366b] text-white border-2 border-black p-2">
+          Com apenas 17 suítes, o Barracuda Beach Hotel é um refúgio em completa sinergia com a natureza selvagem de Itacaré. Exclusividade, conhecimento local e integração criam um conceito de hospitalidade que conecta cada hóspede do Barracuda com a natureza baiana.
+        </p>
+      </div>
+      <li class="bg-[#0b366b] text-white border-2 border-black p-2 object-fit flex inline-block mt-4 w-80">Carmel Taíba</li>
+      <div class="border-b-2 pb-2 border-black mt-2 pt-2 flex items-start gap-4 pt-2">
+        <img class="w-80 h-80 object-cover" src="/public/carmel.png">
+        <p class="text-justify bg-[#0b366b] text-white border-2 border-black p-2">
+          Localizada em uma vila de pescadores na Praia da Taíba, em São Gonçalo do Amarante, a 75km de Fortaleza, aqui o sossego, o clima quente e o clima intimista transformam um momento simples em algo encantador. O Carmel Taíba Exclusive Resort nasce com o propósito de proporcionar as melhores sensações. Com um design único e uma atmosfera rica de detalhes, possui uma engenharia natural que se ergue sobre uma falésia e se projeta sobre o mar. São 36 acomodações divididas em elegantes vilas com vistas indescritíveis, pensadas para garantir conforto e luxo nos mínimos detalhes.
+        </p>
+      </div>
+      <li class="bg-[#0b366b] text-white border-2 border-black p-2 object-fit flex inline-block mt-4 w-80">Casana</li>
+      <div class="border-b-2 pb-2 border-black mt-2 pt-2 flex items-start gap-4 pt-2">
+        <img class="w-80 h-80 object-cover" src="/public/casana.png">
+        <p class="text-justify bg-[#0b366b] text-white border-2 border-black p-2">
+          Onde os grandes ventos da costa nordeste do Brasil encontram areia branca e águas emocionantes. Onde dunas ondulantes e lagoas cintilantes abrigam animais selvagens preciosos. Um refúgio descontraído e luxuoso, no hotel Casana, você pode optar por praticar kitesurf, explorar a encantadora vila de pescadores ou simplesmente relaxar na sua rede. Deixe-se surpreender pelas maravilhas da natureza.
+        </p>
+      </div>
+      <li class="bg-[#0b366b] text-white border-2 border-black p-2 object-fit flex inline-block mt-4 w-80">Kenoa</li>
+      <div class="border-b-2 pb-2 border-black mt-2 pt-2 flex items-start gap-4 pt-2">
+        <img class="w-80 h-80 object-cover" src="/public/kenoa.png">
+        <p class="text-justify bg-[#0b366b] text-white border-2 border-black p-2">
+          Experiências autênticas com um serviço sincero e dedicado que surpreenderá nos detalhes. Acomodações eco-chiques com serviços excepcionais. Este paraíso é o destino perfeito para escapar de tudo e sentir a natureza como nunca antes.
+        </p>
+      </div>
+      <li class="bg-[#0b366b] text-white border-2 border-black p-2 object-fit flex inline-block mt-4 w-80">Nannai Muro Alto</li>
+      <div class="border-b-2 pb-2 border-black mt-2 pt-2 flex items-start gap-4 pt-2">
+        <img class="w-80 h-80 object-cover" src="/public/nannai.png">
+        <p class="text-justify bg-[#0b366b] text-white border-2 border-black p-2">
+          A NANNAI constrói sua história local ao chegar a um destino. Esta delicada trama, que se integra com a comunidade, está nos princípios da sua hospitalidade. Da escolha da decoração à valorização da cultura. Da proteção ao meio ambiente ao desenvolvimento humano, existe uma visão séria e comprometida com o turismo sustentável, que olha para o todo. Cuidar de sua localização e localidade é uma questão de identidade. O mar, na frente do hotel, é protegido por arrecifes, formando uma piscina natural de águas mornas e cristalinas. O hotel oferece hidroginástica, alongamento, dança, academia, golfe e tênis, vela, stand up paddle, caiaque e um Spa exclusivo da L’Occitane.
+        </p>
+      </div>
+      <li class="bg-[#0b366b] text-white border-2 border-black p-2 object-fit flex inline-block mt-4 w-80">Pedras do Patacho</li>
+      <div class="border-b-2 pb-2 border-black mt-2 pt-2 flex items-start gap-4 pt-2">
+        <img class="w-80 h-80 object-cover" src="/public/pedras.png">
+        <p class="text-justify bg-[#0b366b] text-white border-2 border-black p-2">
+          Na Pedras do Patacho, eles criam experiências sensoriais. Um caminho ladeado por pedras naturais leva o hóspede diretamente a uma das mais belas praias do Nordeste. Natureza em sintonia com a modernidade – em seu projeto, incorporam elementos ousados à paisagem que circunda o hotel. Revestimentos como pedra, madeira e aço compõem a estrutura em conjunto com itens como placas de metal e vidro, dando vida a uma identidade arquitetônica única. Cada detalhe das Pedras do Patacho foi pensado para que os hóspedes tenham uma experiência completa. Algumas das experiências disponíveis no hotel são passeio de bicicleta, passeio de jangada, cozinhar com o chef e degustação de vinhos. Os hóspedes também podem colher os seus próprios vegetais da horta orgânica.
+        </p>
+      </div>
+      <li class="bg-[#0b366b] text-white border-2 border-black p-2 object-fit flex inline-block mt-4 w-80">Ponta dos Ganchos</li>
+      <div class="border-b-2 pb-2 border-black mt-2 pt-2 flex items-start gap-4 pt-2">
+        <img class="w-80 h-80 object-cover" src="/public/pontas.png">
+        <p class="text-justify bg-[#0b366b] text-white border-2 border-black p-2">
+          Experiências únicas no Paraíso. O Ponta dos Ganchos Resort é referência em hotéis de luxo no Brasil e se destaca pela excelência nos serviços e sofisticação nos detalhes. “Melhor hotel da América“ Reconhecido como o melhor hotel da coleção na categoria em toda a América pela Leading Hotels of the World. Ponta dos Ganchos é cercado por uma vila de pescadores e imersa em uma natureza exuberante. É um cenário especialmente desenhado, de fato: uma península de falésias que formam enseadas onde a natureza age caprichosamente, com uma aura de romance proporcionada pela mais autêntica tranquilidade e privacidade.
+        </p>
+      </div>
+      <li class="bg-[#0b366b] text-white border-2 border-black p-2 object-fit flex inline-block mt-4 w-80">Tivoli Eco Resort</li>
+      <div class="border-b-2 pb-2 border-black mt-2 pt-2 flex items-start gap-4 pt-2">
+        <img class="w-80 h-80 object-cover" src="/public/tivoli.png">
+        <p class="text-justify bg-[#0b366b] text-white border-2 border-black p-2">
+          A Bahia mantém a natureza como sua rainha, com sua beleza sempre em abundância. Na vasta costa de praias estendem-se areias brancas e coqueirais a perder de vista, emoldurados por um mar verde esmeralda com águas mornas o ano inteiro. Venha descobrir a rica história e cultura deste povo tão alegre, sorridente e hospitaleiro no Tivoli Eco Resort. O Tivoli Ecoresort Praia do Forte Bahia é um hotel idílico na Bahia, Brasil, ao norte de Salvador uma Bahia para os amantes do ecoturismo genuíno para desfrutar de belezas naturais incomparáveis. Situado em 30.000 hectares de floresta tropical, o resort em Praia do Forte possui 12 km de praia dourada e um spa de classe mundial com tratamentos exclusivos para reviver o corpo e a alma.
+        </p>
+      </div>
+      <li class="bg-[#0b366b] text-white border-2 border-black p-2 object-fit flex inline-block mt-4 w-80">Txai</li>
+      <div class="border-b-2 pb-2 border-black mt-2 pt-2 pb-2 flex items-start gap-4 pt-2">
+        <img class="w-80 h-80 object-cover" src="/public/txai.png">
+        <p class="text-justify bg-[#0b366b] text-white border-2 border-black p-2">
+          Membro do grupo exclusivo de hotéis Relais & Châteaux, o Txai Itacaré vai muito além da hospitalidade. A filosofia quotidiana de bem-estar e bem acolher é praticada proporcionando momentos únicos num refúgio que transmite conforto e simplicidade em cada detalhe. Concebido com a filosofia de exclusividade, bem morar e bem hospedar, o Txai está localizado em um local de rara beleza cênica com entorno natural, garantindo sustentabilidade ecológica, desenvolvimento social responsável e respeito à cultura e à comunidade local.
+        </p>
+      </div>
+      <li class="bg-[#0b366b] text-white border-2 border-black p-2 object-fit flex inline-block mt-4 w-80">Zorah Beach</li>
+      <div class="border-b-2 border-black mt-2 pt-2 pb-4 flex items-start gap-4 pt-2">
+        <img class="w-80 h-80 object-cover" src="/public/zorah.png">
+        <p class="text-justify bg-[#0b366b] text-white border-2 border-black p-2">
+          Tranquilidade, beleza e exclusividade, é assim que podemos definir Guajiru, litoral oeste cearense, onde se encontra o Zorah Beach Hotel. Localizado de frente para o mar, na praia do Guajiru, no municipio de Trairi, aprox 130km de Fortaleza, o Zorah Beach hotel foi buscar inspiração no espírito asiático com toques tropicais para apresentar o seu conceito de exclusividade. O hotel fica em uma das praias mais paradisíacas do litoral cearense para oferecer aos clientes mais exigentes um clima de tranquilidade, sofisticação e piscinas naturais na maré baixa. Outro diferencial do Zorah, fica por conta da culinária. Os pratos do restaurante trazem um toque contemporâneo priorizando ingredientes da região e pratos asiáticos.
+        </p>
+      </div>
+    </ul>
   </main>
-  <footer class="px-4">
+  <footer class="px-4 mt-4">
     <p class="text-xs text-center">Este site foi desenvolvido como parte de um trabalho acadêmico para a faculdade. Ele tem como objetivo demonstrar habilidades em desenvolvimento web, incluindo estruturação de conteúdo, navegação entre páginas e design responsivo.</p>
     <p class="text-xs text-center mt-2"><strong>Arthur Fernandes</strong> - UVV - 2024</p>
   </footer>
